--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,10 @@
-# See NOTE comments for places to modify.
+# docker-compose.yml modifié pour RTX 4050 (6GB) + API LLM externe
 services:
   traefik:
     image: traefik:v3.3.1
     command:
-      # Swarm provider configuration
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
-
-      # This is set up for HTTP. If you want HTTPS support for production, use Docker Swarm
-      # (check out swarm-deploy.yml) or ask ChatGPT to modify this file for you.
       - "--entrypoints.web.address=:80"
     ports:
       - "80:80"
@@ -27,7 +23,7 @@ services:
       - "traefik.http.routers.frontend.rule=PathPrefix(`/`)"
       - "traefik.http.routers.frontend.entrypoints=web"
       - "traefik.http.services.frontend.loadbalancer.server.port=3000"
-      - "traefik.http.routers.frontend.priority=10" # lowest priority
+      - "traefik.http.routers.frontend.priority=10"
 
   backend:
     image: unmute-backend:latest
@@ -37,10 +33,19 @@ services:
     volumes:
       - ./unmute:/app/unmute
     environment:
+      # Health-check variables (GET /api/build_info et /v1/models)
       - KYUTAI_STT_URL=ws://stt:8080
       - KYUTAI_TTS_URL=ws://tts:8080
-      - KYUTAI_LLM_URL=http://llm:8000
-      - NEWSAPI_API_KEY=$NEWSAPI_API_KEY
+      - KYUTAI_LLM_URL=https://api.openai.com
+
+      # Variables pour le client OpenAI
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - LLM_PROVIDER=openai
+      - LLM_MODEL=gpt-4o-mini
+
+      # Autres configurations
+      - SYSTEM_LANGUAGE=fr
+      - NEWSAPI_API_KEY=${NEWSAPI_API_KEY}
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.backend.rule=PathPrefix(`/api`)"
@@ -49,8 +54,7 @@ services:
       - "traefik.http.middlewares.strip-api.replacepathregex.replacement=/$$1"
       - "traefik.http.routers.backend.entrypoints=web"
       - "traefik.http.services.backend.loadbalancer.server.port=80"
-      - "traefik.http.routers.backend.priority=100" # higher priority than frontend
-      - "prometheus-port=80"
+      - "traefik.http.routers.backend.priority=100"
 
   tts:
     image: moshi-server:latest
@@ -59,7 +63,10 @@ services:
       context: services/moshi-server
       dockerfile: public.Dockerfile
     environment:
-      - HUGGING_FACE_HUB_TOKEN=$HUGGING_FACE_HUB_TOKEN
+      - HUGGING_FACE_HUB_TOKEN=${HUGGING_FACE_HUB_TOKEN}
+      - TORCH_DTYPE=float16
+      - MODEL_CACHE_DIR=/models
+      - OPTIMIZE_MEMORY=true
     volumes:
       - ./volumes/cargo-registry-tts:/root/.cargo/registry
       - ./volumes/tts-target:/app/target
@@ -71,8 +78,10 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              count: all
+              device_ids: ["0"]
               capabilities: [gpu]
+        limits:
+          memory: 4G
 
   stt:
     image: moshi-server:latest
@@ -81,7 +90,11 @@ services:
       context: services/moshi-server
       dockerfile: public.Dockerfile
     environment:
-      - HUGGING_FACE_HUB_TOKEN=$HUGGING_FACE_HUB_TOKEN
+      - HUGGING_FACE_HUB_TOKEN=${HUGGING_FACE_HUB_TOKEN}
+      - TORCH_DTYPE=float16
+      - MODEL_CACHE_DIR=/models
+      - OPTIMIZE_MEMORY=true
+      - STT_LANGUAGE=fr
     volumes:
       - ./volumes/cargo-registry-stt:/root/.cargo/registry
       - ./volumes/stt-target:/app/target
@@ -93,36 +106,10 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              count: all
+              device_ids: ["0"]
               capabilities: [gpu]
-
-  llm:
-    image: vllm/vllm-openai:v0.9.1
-    command:
-      [
-        # NOTE: Change the LLM here if you want.
-        # (caution: gemma-3-1b-it also exists but it's slow on vLLM: https://github.com/vllm-project/vllm/issues/19575)
-        "--model=meta-llama/Llama-3.2-1B-Instruct",
-        # NOTE: You can adapt this based on your GPU memory.
-        # A higher value takes more memory but supports longer conversations.
-        "--max-model-len=1536",
-        "--dtype=bfloat16",
-        # NOTE: Change this based on your GPU memory.
-        # A higher value can make inference faster.
-        "--gpu-memory-utilization=0.4",
-      ]
-    volumes:
-      - ./volumes/huggingface-cache:/root/.cache/huggingface"
-      - ./volumes/vllm-cache:/root/.cache/vllm
-    environment:
-      - HUGGING_FACE_HUB_TOKEN=$HUGGING_FACE_HUB_TOKEN
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
+        limits:
+          memory: 4G
 
 networks:
   default:
